--- a/style.css
+++ b/style.css
@@ -1,515 +1,339 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900;&display=swap');
-
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    text-decoration: none;
-    border: none;
-    outline: none;
-    scroll-behavior: smooth;
-    font-family: 'Poppind', sans-serif;
-}
- 
-:root{
-    --bg-color:white;
-    --second-bg-color: whitesmoke;
-    --text-color:black;
-    --main-color:rgb(29, 28, 29);
-}
-
-html{
-    font-size: 62.5%;
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     overflow-x: hidden;
-}
-
-body{
-    background: var(--bg-color);
-    color: var(--text-color);
-} 
-
- section{
-    min-height: 100vh;
-    padding: 10rem 9% 2rem;
-}
-
-.header{
-    position:fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 2rem 9%;
-    background: var(--bg-color);
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    z-index: 100;
-}
-
-.header.sticky{
-    border-bottom: .1rem solid rgba(0, 0, 0, .2);
-}
-
-.logo{
-    font-size: 2.5rem;
-    color:var(--text-color);
-    font-weight: 600;
-    cursor: default;
-}
-
-.navbar a {
-    font-size: 1.7rem;
-    color: var(--text-color);
-    margin-left: 4rem;
-    transition: .3s;
-}
-
-.navbar a:hover,
-.navbar a.active {
-    color: var(--main-color);
-}
-
-#menu-icon{
-    font-size:3.6rem;
-    color: var(--text-color);
-    display: none;
-}
-
-.home {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.home-img img{
-    width: 35vw;
-    animation: floatImage 4s eae-in-out infinite;
-    border-radius: 30%;
+  }
+  
+  /* Navigation Bar */
+  
+  #home {
+    background-color:  rgb(36, 34, 34);
+    padding-bottom: 1cm;
+    margin-left:-1cm;
+    margin-right:-1cm;
+    margin-top:-1cm;
+    padding-top: 2cm;
+    padding-bottom: 2cm;
+    height: 5mm;
    }
-        
-@keyframes floatImage{
-0%{
-    transform: translateY(0);
-}
-
-50%{
-    transform: translateY(-2.4rem);
-}
-
-100%{
-    transform: translateY(0);
-}
-}
- 
-.home-content h3{
-    font-size: 3.2rem;
-    font-weight: 700;
-}
-
-.home-content h3:nth-of-type(2){
-    margin-bottom: 2rem;
-}
-
-span{
-    color: var(--main-color);
-}
-
-
-.home-content h1{
-    font-size: 5.6rem;
-    font-weight: 700;
-    line-height: 1.3;
-}
-
-.home-content p{
-    font-size: 1.6rem;
-}
-
-.social-media a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    background: transparent;
-    border: .2rem solid var(--main-color);
-    border-radius: 50%;
-    font-size: 2rem;
-    color: var(--main-color);
-    margin: 3rem 1.5rem 3rem 0;
-    transition: .5s ease;
-}
-.social-media a:hover{
-    background: var(--main-color);
-    color: var(--second-bg-color);
-    box-shadow: 0 0 1rem var(--main-color);
-}
-
-.btn{
-    display: inline-block;
-    padding: 1rem 2.8rem;
-    background: var(--main-color);
-    border-radius: 4rem;
-    box-shadow: 0 0 1rem var(--main-color);
-    font-size: 1.6rem;
-    color: var(--second-bg-color);
-    letter-spacing: .1rem;
-    font-weight: 600;
-    transition: .5s ease;
-    margin-top: 20px;
-}
-
-.btn:hover{
-    box-shadow: none;
-}
-
-.about{
+  
+  .topmenu {
+    color: lightgray;
+    margin: 10px;
+    padding: 20px;
+    font-size: 20px;
+    text-decoration:none;
+  }
+  
+  .topmenu:hover {
+    color: white;
+    font-weight: bolder;
+    text-decoration: underline;
+    /* Add the styles here */
+  }
+  
+  .topdiv {
+    float: right;
+    padding-right: 1cm;
+  }
+  
+  .profile_name {
+    float: left;
+    padding-left: 2cm;
+    color: whitesmoke;
+    font-size: 20px;
+    /* Add the styles here */
+  }
+  
+  .profile_name .contact_info {
+    font-size: 15px;
+    font-style: italic;
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 2rem;
-    background: var(--second-bg-color);
-}
-
-.about-img img{
-      width: 25vw;
-    margin-top: 4rem;
-    border-radius: 30%;
-}
-
-.heading{
+    flex-direction: row;
+  }
+  
+  .contact_info img {
+    width:25px;
+    margin-right: 10px;
+    float:left;
+  }
+  
+  /* Titles */
+  
+  h2 {
+    text-align: justify;
+    font-size: 50px;
     text-align: center;
-    font-size: 4.5rem;
-
-}
-
-.about-content h2{
-    text-align: left;
-    line-height: 1.2;
-}
-
-.about-content h3{
-    font-size: 2.6rem;
-}
-
-.about-content p{
-    font-size: 1.6rem;
-    margin: 2rem 0 1rem;
-} 
-
-.services-box{
-    max-width: 33.99%;
-    margin-top: 70px;
-}
-
-/* BREAKPOINTS */
- /* @media (max-width: 1200px){
-    html {
-        font-size: 55%;
-    } */
-
-/* 
-@media (max-width: 991px){
-    .header {
-       padding: 2rem 3%;
-    }  */
-
-
-
-.services h2{
-    margin-bottom: 1rem;
+    float: left;
+    color: hsl(330, 86%, 46%);
+    margin: 30px;
+    margin-left: 60px;
+    margin-top: 40px;
+    margin-bottom: 0px;
+  }
+  
+  .introduction {
+    text-align: justify;
+    font-size: 30px;
     text-align: center;
-    margin-top: -9rem;
-}
-
-.services-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-    margin-top: -7rem;
-   }
-
-/* Styles for mobile devices only */
-@media (max-width: 600px) {
-    /* Your mobile-specific styles go here */
-    .services-container {
-        flex-direction: column;
-    }
-}
-    /* .services-container {
-        flex-direction: column;
-    } */
-
-
-   
-.services-container .services-box {
-    flex: 1 1 25rem;
-    background: var(--second-bg-color);
-    padding: auto;
-    border-radius: 2rem;
-    text-align: center;
-    border: .2rem solid var(--bg-color);
-    transition: .5s ease;
-    font-size: 16px;
-}
-
-.services-container .services-box:hover{
-    border-color: var(--second-bg-color);
-    transform: scale(1.02);
-}
-
-.services-box i {
-    font-size: 7rem;
-    color: var(--main-color);
-}
-
-.services-box h3{
-    font-size: 2.6rem;
-    margin-bottom: 16px;
-}
-
-.services-box .p{
-    font-size: 1.6rem;
-    margin: 1rem 0 3rem;
-}
-
-.portfolio{
-    background: var(--second-bg-color);
-    margin-top: 5rem;
-}
-
-.portfolio h2 {
-    margin-bottom: 1rem;
-}
-
-.portfolio-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    gap: 2.5rem;
-}
-
-.portfolio-container .portfolio-box{
+    float: left;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    animation-duration: 5s;
     position: relative;
-    border-radius: -2rem;
-    box-shadow: 0 0 1rem var(--bg-color);
-    overflow: hidden;
+  }
+  
+  /* Used in the About Me sections */
+  
+  .container {
     display: flex;
-}
-
-.portfolio-box img{
-    width: 100%;
-    transition: .5s ease;
-}
-
-.portfolio-box:hover img{
-    transform: scale(1.1);
-}
-
-.portfolio-box .portfolio-layer{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0 ,0, .1), var(--main-color));
+  }
+  
+  /* About Me */
+  
+  #about-me {
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    text-align: center;
-    padding: 0 4rem;
-    transform: translateY(100%);
-    transition: .5s ease;
-}
-
-.portfolio-box:hover .portfolio-layer{
-    transform: translateY(0);
-
-}
-
-.portfolio-layer h4{
-    font-size: 3rem;
-}
-
-.portfolio-layer p{
-    font-size: 1.6;
-    margin: .3rem 0 1rem;
-}
-
-.portfolio-layer a{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 5rem;
-    height: 5rem;
-    background: var(--text-color);
-    border-radius: 50%; 
-}
-
-.portfolio-layer a i{
-    font-size: 2rem;
-    color: var(--second-bg-color);
-}
-
-.contact h2{
-    margin-bottom: 5rem;
-}
-
-.contact form {
-    max-width: 70rem;
-    margin: 1rem auto;
-    text-align: center;
-    margin-bottom: 3rem;
-    }
-
-.contact form .input-box{
+  }
+  
+  #about-me .about-img {
+    width: 40%;
+    margin-right: auto;
+  }
+  
+  #about-me .about-text {
+    width: 50%;
+  }
+  
+  #about-me h1 {
+    font-size: 65px;
+    margin-top: 90px;
+    color: hsl(330, 86%, 46%);
+  }
+  
+  #about-me p {
+    font-size: 25px;
+    color: rgb(128, 128, 128);
+    margin-top: -1cm;
+  }
+  
+  .profile_image {
+    width: 550px;
+    height: fit-content;
+    vertical-align: middle;
+    margin: 5px;
+  }
+  
+  /* Skills */
+  
+  .all_skills {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.contact form .input-box input, 
-.contact form textarea{
-    width: 100%;
-    padding: 1.5rem;
-    font-size: 1.6rem;
-    color: var(--text-color);
-    background: var(--second-bg-color);
-    border-radius: .8rem;
-    margin: .7rem 0;
-}
-
-.contact form .input-box input{
-    width: 49%;
-}
-
-.contact form textarea{
-    resize: none;
-}
-
-.contact form .btn{
-    margin-top: 2rem;
+    flex-direction: row;
+    flex-flow: wrap;
+  }
+  
+  .skill {
+    border: 1px solid gray;
+    display: block;
+    border-radius: 6px;
+    text-align: center;
+    margin: 50px;
+    padding: 10px;
+    width: 2in;
+    font-size: 20px;
+    box-shadow: 0 3px 10px gray;
+  }
+  
+  .skill img {
+    height: 35px;
+    align-items: center;
+  }
+  
+  .skills h6 {
+    align-items: center;
+    font-size: 20px;
+    margin-block-start: 8px;
+    margin-block-end: 5px;
+    font-weight: bold;
+  } 
+  
+  .skills p {
+    align-items: center;
+    font-size: 15px;
+    color: gray;
+    margin-block-start: 5px;
+    margin-block-end: 5px;
+  } 
+  
+  .flex_center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  /* Projects */
+  
+  .projects-container {
+    margin-top: 30px;
+    margin-left: 60px;
+  }
+  
+  .projects-container hr {
+    border: 1px solid lightgray;
+    width: 75%;
+    margin-left: 5cm;
+  }
+  
+  .project-card {
+    margin: 0 15px 15px 30px;
+    padding-bottom: 5px;
+  }
+  
+  .project-card h3 {
+    font-size: 25px;
+    margin-left: 30px;
+  }
+  
+  .project-card li {
+    font-size: 20px;
+    margin-left: 30px;
+  }
+  
+  /* Recommendations */
+  
+  .all_recommendations {
+    display: flex;
+    align-items: center;
+    margin-left: 1in;
+    flex-direction: row;
+    flex-flow: wrap;
+    padding: 20px;
+  }
+  
+  .recommendation {
+    font-style: italic;
+    text-align: left;
+    width: 21.875rem;
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--primary-shadow);
+    padding: 20px;
+    margin: 10px;
+    border:1px solid gray;
+    font-size: 18px;
+    height:150px
+  }
+  
+  .recommendation span {
+    color: #7600bc;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  /* Scroll to Top Button */
+  
+  .iconbutton{
+    width: 48px;
+    height: 48px;
+    border-radius: 100%;
+    background-color: hsl(330, 86%, 46%);;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    right: 3%;
+    bottom: 3%;
     cursor: pointer;
-}
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 2rem 9%;
-    background: var(--second-bg-color);
-}
-
-.footer-text p{
-    font-size: 1.6rem;
-    font-color:var(--text-color);
-}
-
-.footer-iconTop a{
-    display: inline-flex;
-    justify-content:center;
-    align-items: center;
-    padding: .8rem;
-    background: var(--main-color);
-    border-radius: .8rem;
-    transition: .5s ease;
-}
-
-.footer-iconTop a:hover{
-    box-shadow: 0 0 1rem var(--main-color);
-}
-
-.footer-iconTop a i{
-    font-size: 2.4rem;
-    color: var(--second-bg-color); 
-}
-
-/* BREAKPOINTS */
-@media (max-width: 1200px){
-    html {
-        font-size: 55%;
-    }
-}
-
-@media (max-width: 991px){
-    .header {
-       padding: 2rem 3%;
-    }
-
-    section{
-        padding: 10rem 3% 2rem;
-    }
-
-    .services{
-        padding-bottom: 7rem;
-    }
-
-    .portfolio{
-        padding-bottom:  7rem;
-    }
-
-    .contact{
-        min-height: auto;
-    }
-
-    .footer {
-        padding: 2rem 3%;
-    }
-}
-
-@media (max-width: 768px){
-    #menu-icon{
-        display: block;
-    }
-
-    .navbar{
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        padding: 1rem 3%;
-        background: var(--bg-color);
-        border-top: .1rem solid rgba(0, 0, 0, .2);
-        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-        display: none;
-    }
-
-    .navbar.active {
-        display: block;
-    }
-
-    .navbar a{
-        display: block;
-        font-size: 2rem;
-        margin: 3rem 0;
-    }
-
-    .home{
-        flex-direction: column;
-    }
-
-    .home-content h3{
-        font-size: 2.6rem;
-    }
-
-    .home-content h1 {
-        font-size: 5rem;
-    }
-
-    .home-img img{
-        width: 70vw;
-        margin-top: 4rem;
-    }
-
-    .about{
-        flex-direction: column-reverse;
-    }
-
-    .about img {
-        width: 70vw;
-        margin-top: 4rem;
-    }
+  }
+  
+  /* Form Pop-up */
+  
+  .popup {
+    width:400px;
+    background-color: #e8bcf0;
+    border-radius: 3mm;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    position: fixed;
+    /* padding: 30px; */
+    visibility: hidden;
+  }
+  
+  .popup img {
+    padding-top: 20px;
+  }
+  
+  .popup button {
+    background-color: #fff;
+    border: 1px solid hsl(330, 86%, 46%);;
+    color: hsl(330, 86%, 46%);
+    /* color: #7600bc; */
+    display: block;
+    border-radius: 6px;
+    text-align: center;
+    margin: 50px;
+    padding: 10px;
+    width: 2in;
+    font-size: 20px;
+    margin-left: 25%;
+  }
+  
+  .popup button:hover {
+    background-color: #fff;
+    border: 2px solid hsl(330, 86%, 46%);;
+    color: hsl(330, 86%, 46%);
+    /* color: #7600bc; */
+    display: block;
+    font-weight: bolder;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 25%;
+  }
+  
+  /* Recommendation Form */
+  
+  input, textarea {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    margin: 10px;  
+    width:100%;
+  }
+  
+  fieldset {
+    display: flexbox;
+    align-content: center;
+    justify-content: center;  
+    padding: 25px; 
+    margin-left: 50px; 
+    margin-right: 50px;   
+    border: thin solid white;
+    width: 50%;
+  }
+  
+  /* Buttons */
+  
+  button {
+    background-color: #fff;
+    border: 1px solid hsl(330, 86%, 46%);c;
+    color: hsl(330, 86%, 46%);
+    /* color: #7600bc; */
+    display: block;
+    border-radius: 6px;
+    text-align: center;
+    margin: 50px;
+    padding: 10px;
+    width: 2in;
+    font-size: 20px;
+  }
+  
+  button:hover {
+    background-color:hsl(330, 86%, 46%);;
+    border: 1px solid hsl(330, 86%, 46%);;
+    color: #fff;
+    display: block;
+    border-radius: 6px;
+    text-align: center;
+    cursor: pointer;
+  }
