--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ body {
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
+    align-items: center;
+    margin-left: 1.5in;
+    flex-flow: wrap;
+    padding: 20px;
   }
   
   .skill {
@@ -231,6 +235,7 @@ body {
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
   }
+
   
   /* Scroll to Top Button */
   
